QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

GIT HEAD

- Bumped copyright headers into the New Year (2019).


0.5.5  2018-11-23  A Black-Friday'18 Release!

- Old deprecated Qt4 build support is no more.

- Graph port sort options added as View / Sort menu.

- System tray options now subject to current desktop
  environment availability.

- Also disable Setup / Misc / Other / Save JACK server
  configuration to (.jackdrc) when JACK D-Bus interface
  is enabled.

- Whether to use server synchronous mode option added
  to Setup / Settings / Parameters (only applied when
  JACK D-BUS interface is enabled).

- Disable some Setup / Settings / Advanced parameters 
  when JACK D-Bus interface is enabled and vice-versa.

- Attempt to power-cycle JACK D-Bus service on demand;

- Marked as probably useless anyway, old "H/W Monitor"
  option (-H) is now being ditched from Setup / Settings
  / Advanced tab.

- Graph port/connections highlighting.


0.5.4  2018-09-24  An Early Autumn'18 Release.

- Graph port-type colors are now configurable (cf. menu
  View > Colors.

- Make Graph nodes (ie. client boxes) transparent for yet
  some eye-candiness ;). Also keep the (Graph) current
  selection across port (dis)connections.

- Drawing patchbay connector lines as (bezier) curves is
  now a difinitive and fixed feature (as long as no more
  remains from the so called "Cambric explosion era" are
  still lurking in there).

- AppStream metadata updated to be the most compliant with
  latest freedesktop.org specification and recommendation.

- Graph auto-layout improvement for brand new node clients.

- Avoid showing setup warning when no server settings have
  changed.

- Fixed JACK D-Bus settings for MIDI driver parameter.


0.5.3  2018-07-22  A Summer'18 Release.

- Portuguese (pt) translation added (by Heitor Rocha).

- AppData/AppStream metadata is now settled under an all
  permisssive license (FSFAP).
