@@ -439,13 +439,13 @@ Voulez-vous enregistrer les changements ?</translation>
 <context>
     <name>qjackctlGraphCanvas</name>
     <message>
-        <location filename="../qjackctlGraph.cpp" line="1621"/>
-        <location filename="../qjackctlGraph.cpp" line="1746"/>
+        <location filename="../qjackctlGraph.cpp" line="1626"/>
+        <location filename="../qjackctlGraph.cpp" line="1751"/>
         <source>Connect</source>
         <translation>Connecter</translation>
     </message>
     <message>
-        <location filename="../qjackctlGraph.cpp" line="1782"/>
+        <location filename="../qjackctlGraph.cpp" line="1787"/>
         <source>Disconnect</source>
         <translation>Déconnecter</translation>
     </message>
