@@ -5,6 +5,8 @@ ChangeLog
 
 GIT HEAD
 
+- Graph port temporary highlighting while hovering.
+
 - Bumped copyright headers into the New Year (2019).
 
 
